force-app/main/default/objects/Property_Measure__c/Property_Measure__c.object-meta.xml
<CustomObject>
    <description>Details of the work to apply a measure type to a property</description>
    <label>Property Measure</label>
    <nameField>
        <displayFormat>PRM-{00000}</displayFormat>
        <label>Property Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>