force-app/main/default/objects/Property_Measure__c/fields/Batch_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Reference_Number__c</fullName>
    <description>Displays reference form parent batch record</description>
    <formula>IF(Parent_Batch__c=&quot;&quot;,&quot;Not Applicable&quot;,Parent_Batch__r.Full_Batch_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Reference Number</label>
    <type>Text</type>
</CustomField>