force-app/main/default/objects/Property_Measure__c/fields/Change_Link__c.field-meta.xml
<CustomField>
    <fullName>Change_Link__c</fullName>
    <formula>&quot;/warmhomesportal/create-record-change?Id=&quot; &amp;  Related_Funding_Award__r.Id &amp; 
    &quot;&amp;varMeasureReference=&quot; &amp;  Name</formula>
    <label>Change Link</label>
    <type>Text</type>
</CustomField>