force-app/main/default/objects/Property_Measure__c/fields/Date_of_Starting_Installation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Starting_Installation__c</fullName>
    <label>Date of Starting Installation</label>
    <type>Date</type>
</CustomField>