force-app/main/default/objects/Property_Measure__c/fields/Installer_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Installer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Measures</relationshipLabel>
    <relationshipName>Property_Measures</relationshipName>
    <type>Lookup</type>
</CustomField>