force-app/main/default/objects/Property_Measure__c/fields/Installer_Name_TM_Licence_No__c.field-meta.xml
<CustomField>
    <fullName>Installer_Name_TM_Licence_No__c</fullName>
    <inlineHelpText>Enter the Name /TrustMark License Number of the installer who installed this measure.</inlineHelpText>
    <label>Installer Name/ TM Licence No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>