force-app/main/default/objects/Property_Measure__c/fields/MCS_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>MCS_Reference_Number__c</fullName>
    <inlineHelpText>Triggers if installing certain list of measures. eg. MCS-01480951-Y</inlineHelpText>
    <label>MCS Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>