force-app/main/default/objects/Property_Measure__c/fields/Measure_Description__c.field-meta.xml
<CustomField>
    <fullName>Measure_Description__c</fullName>
    <label>Measure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>