force-app/main/default/objects/Property_Measure__c/fields/Measure_Type_Child__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the trustmark property measure type which are the children in the measure type hierarchy</inlineHelpText>
    <label>Measure Type Child</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Property Measure Children</relationshipLabel>
    <relationshipName>Property_Measure_Children</relationshipName>
    <type>Lookup</type>
</CustomField>