force-app/main/default/objects/Property_Measure__c/fields/Measure_Type_Parent__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Measure type Parent</inlineHelpText>
    <label>Measure Type Parent</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Property Measure Parents</relationshipLabel>
    <relationshipName>Measure_Type_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>