force-app/main/default/objects/Property_Measure__c/fields/Other_Measure__c.field-meta.xml
<CustomField>
    <fullName>Other_Measure__c</fullName>
    <label>Other Measure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>