force-app/main/default/objects/Property_Measure__c/fields/Parent_Baseline_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline_Id__c</fullName>
    <formula>Property_Detail__r.Baseline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Baseline Id</label>
    <type>Text</type>
</CustomField>