force-app/main/default/objects/Property_Measure__c/fields/Parent_Batch__c.field-meta.xml
<CustomField>
    <fullName>Parent_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Property Measures</relationshipLabel>
    <relationshipName>Property_Measures</relationshipName>
    <type>Lookup</type>
</CustomField>