force-app/main/default/objects/Property_Measure__c/fields/Property_Detail__c.field-meta.xml
<CustomField>
    <fullName>Property_Detail__c</fullName>
    <label>Property Detail</label>
    <referenceTo>FundingPropertyDetail__c</referenceTo>
    <relationshipLabel>Property Measures</relationshipLabel>
    <relationshipName>Scheme_Measures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>