force-app/main/default/objects/Property_Measure__c/fields/Related_Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Related_Funding_Award__c</fullName>
    <label>Related Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Property Measures</relationshipLabel>
    <relationshipName>Property_Measures</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>