force-app/main/default/objects/Property_Measure__c/fields/SAP_Measure_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Measure_Name__c</fullName>
    <label>SAP Measure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>