force-app/main/default/objects/Property_Measure__c/fields/TM_Assessment_Reference__c.field-meta.xml
<CustomField>
    <fullName>TM_Assessment_Reference__c</fullName>
    <label>TM Assessment Reference</label>
    <length>32</length>
    <type>Text</type>
</CustomField>