force-app/main/default/objects/Property_Measure__c/fields/TM_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>TM_Certificate_Number__c</fullName>
    <label>TM Certificate Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>