force-app/main/default/objects/Property_Measure__c/fields/TM_DW_Code__c.field-meta.xml
<CustomField>
    <fullName>TM_DW_Code__c</fullName>
    <label>TM DW Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>