force-app/main/default/objects/Property_Measure__c/fields/TM_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>TM_Handover_Date__c</fullName>
    <label>TM Handover Date</label>
    <type>Date</type>
</CustomField>