force-app/main/default/objects/Property_Measure__c/fields/TM_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>TM_Installed_Date__c</fullName>
    <label>TM Installed Date</label>
    <type>Date</type>
</CustomField>