force-app/main/default/objects/Property_Measure__c/fields/TM_Local_Authority_Project_Key__c.field-meta.xml
<CustomField>
    <fullName>TM_Local_Authority_Project_Key__c</fullName>
    <label>TM Local Authority Project Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>