force-app/main/default/objects/Property_Measure__c/fields/TM_Local_Authority_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>TM_Local_Authority_Project_Phase__c</fullName>
    <label>TM_Local Authority Project Phase</label>
    <length>15</length>
    <type>Text</type>
</CustomField>