force-app/main/default/objects/Property_Measure__c/fields/TM_Local_Authority_Project_Reference__c.field-meta.xml
<CustomField>
    <fullName>TM_Local_Authority_Project_Reference__c</fullName>
    <label>TM Local Authority Project Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>