force-app/main/default/objects/Property_Measure__c/fields/TM_Lodged_Status__c.field-meta.xml
<CustomField>
    <fullName>TM_Lodged_Status__c</fullName>
    <label>TM Lodged Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>