force-app/main/default/objects/Property_Measure__c/fields/TM_Lodgement_Type__c.field-meta.xml
<CustomField>
    <fullName>TM_Lodgement_Type__c</fullName>
    <label>TM Lodgement Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>