force-app/main/default/objects/Property_Measure__c/fields/TM_Measure_Category__c.field-meta.xml
<CustomField>
    <fullName>TM_Measure_Category__c</fullName>
    <description>Original TM Measure Category</description>
    <label>TM Measure Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>