force-app/main/default/objects/Property_Measure__c/fields/TM_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>TM_Measure_Type__c</fullName>
    <description>Original TM</description>
    <label>TM Measure Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>