force-app/main/default/objects/Property_Measure__c/fields/TM_On_or_Off_Gas_Grid_Property__c.field-meta.xml
<CustomField>
    <fullName>TM_On_or_Off_Gas_Grid_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TM On or Off Gas Grid Property</label>
    <type>Checkbox</type>
</CustomField>