force-app/main/default/objects/Property_Measure__c/fields/TM_On_or_Off_Gas_Grid_Property_Desc__c.field-meta.xml
<CustomField>
    <fullName>TM_On_or_Off_Gas_Grid_Property_Desc__c</fullName>
    <label>TM On or Off Gas Grid Property Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>