force-app/main/default/objects/Property_Measure__c/fields/TM_Post_Installation_SAP_Score__c.field-meta.xml
<CustomField>
    <fullName>TM_Post_Installation_SAP_Score__c</fullName>
    <label>TM Post Installation SAP Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>