force-app/main/default/objects/Property_Measure__c/fields/TM_Pre_Installation_Heating_Fuel_Source__c.field-meta.xml
<CustomField>
    <fullName>TM_Pre_Installation_Heating_Fuel_Source__c</fullName>
    <label>TM Pre Installation Heating Fuel Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boiler and radiators, mains gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>