force-app/main/default/objects/Property_Measure__c/fields/TM_PreInstallation_Heating_Fuel_Source__c.field-meta.xml
<CustomField>
    <fullName>TM_PreInstallation_Heating_Fuel_Source__c</fullName>
    <label>TM PreInstallation Heating Fuel Source</label>
    <length>15</length>
    <type>Text</type>
</CustomField>