force-app/main/default/objects/Property_Measure__c/fields/TM_Short_Address__c.field-meta.xml
<CustomField>
    <fullName>TM_Short_Address__c</fullName>
    <description>Street and Postcode returned by TM and populated in flow</description>
    <label>TM Short Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>