force-app/main/default/objects/Property_Measure__c/fields/TM_Tenure_Type__c.field-meta.xml
<CustomField>
    <fullName>TM_Tenure_Type__c</fullName>
    <label>TM Tenure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>