force-app/main/default/objects/Property_Measure__c/fields/TM_Trade_Code__c.field-meta.xml
<CustomField>
    <fullName>TM_Trade_Code__c</fullName>
    <label>TM Trade Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>