force-app/main/default/objects/Property_Measure__c/fields/TM_UPRN__c.field-meta.xml
<CustomField>
    <fullName>TM_UPRN__c</fullName>
    <description>TM UPRN to connect measure to Trustmark</description>
    <label>TM UPRN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>