force-app/main/default/objects/Property_Measure__c/fields/Total_Cost_of_Single_Measure_Installatio__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Single_Measure_Installatio__c</fullName>
    <label>Total Cost Single Measure Installation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>