force-app/main/default/objects/Property_Measure__c/fields/Trustmark_UMR__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_UMR__c</fullName>
    <description>TM Reference number (UMR- unique measure reference)</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Measure Reference</inlineHelpText>
    <label>Trustmark UMR</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>