force-app/main/default/objects/Property_Measure__c/recordTypes/Energy_Efficiency.recordType-meta.xml
<RecordType>
    <fullName>Energy_Efficiency</fullName>
    <active>true</active>
    <label>Energy Efficiency</label>
</RecordType>