force-app/main/default/objects/Property_Measure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TM_Short_Address__c</columns>
    <columns>Property_Detail__c</columns>
    <columns>TM_Measure_Category__c</columns>
    <columns>TM_Measure_Type__c</columns>
    <columns>Date_of_Starting_Installation__c</columns>
    <columns>Date_of_Completing_Installation__c</columns>
    <columns>Total_Cost_of_Single_Measure_Installatio__c</columns>
    <columns>Status__c</columns>
    <columns>TM_UPRN__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Measure_Type_Child__c</columns>
    <columns>Measure_Type_Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>