force-app/main/default/objects/Property_Measure__c/listViews/All_Property_Measures.listView-meta.xml
<ListView>
    <fullName>All_Property_Measures</fullName>
    <columns>NAME</columns>
    <columns>TM_Short_Address__c</columns>
    <columns>Property_Detail__c</columns>
    <columns>Related_Funding_Award__c</columns>
    <columns>TM_Measure_Category__c</columns>
    <columns>TM_Measure_Type__c</columns>
    <columns>TM_UPRN__c</columns>
    <columns>Trustmark_UMR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Property Measures</label>
</ListView>