force-app/main/default/objects/Property_Measure__c/listViews/Grant_Recipient_Properties_Measures.listView-meta.xml
<ListView>
    <fullName>Grant_Recipient_Properties_Measures</fullName>
    <columns>Related_Funding_Award__c</columns>
    <columns>Property_Detail__c</columns>
    <columns>TM_Short_Address__c</columns>
    <columns>TM_UPRN__c</columns>
    <columns>NAME</columns>
    <columns>TM_Measure_Category__c</columns>
    <columns>TM_Measure_Type__c</columns>
    <columns>Trustmark_UMR__c</columns>
    <columns>Installer_Name_TM_Licence_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property_Measure__c.Energy_Efficiency</value>
    </filters>
    <label>Grant Recipient Properties &amp; Measures</label>
</ListView>